# briai-comedy-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/bot/: design.md  requirements.md  tasks.md
.kiro/specs/webrtc-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
frontend/: admin.html  admin.js  app.js  audio-worklet-processor.js  index.html  style.css
scripts/: run_local_server.sh
src/: __init__.py  main.py
src/config/: agents.yaml
tests/: __init__.py  run_tests.py  test_agent.py  test_deployment.py
