[project]
name = "briai-comedy-agent"
version = "0.1.0"
description = "Real-time AI comedy bot using OpenAI Realtime API"
authors = [
    {name = "BriAI Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "aiohttp>=3.12.0",
    "aiohttp-cors>=0.7.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]