[project]
name = "briai-comedy-agent"
version = "0.1.0"
description = "Real-time AI comedy bot using OpenAI Realtime API"
authors = [
    {name = "BriAI Team"}
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "aiohttp>=3.12.0",
    "aiohttp-cors>=0.7.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "black>=25.1.0",
    "ruff>=0.8.1",
    "mypy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]