[project]
name = "briai-comedy-agent"
version = "0.1.0"
description = "Real-time AI comedy bot using OpenAI Realtime API"
authors = [
    {name = "BriAI Team"}
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.15.0",
    "aiohttp>=3.13.3",
    "aiohttp-cors>=0.8.1",
    "httpx>=0.28.1",
    "websockets>=16.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=25.12.0",
    "ruff>=0.14.11",
    "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
